Opened 5 years ago

Closed 5 years ago

#16388 closed bug (fixed)

Cursor does not blink as expected in Terminal

Reported by: dogcow Owned by: jackburton
Priority: low Milestone: R1/beta3
Component: Applications/Terminal Version: R1/Development
Keywords: cursor, terminal, blink Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by dogcow)

The Blinking cursor setting in the Terminal app seems to be broken.

If Blinking cursor is enabled, when the Terminal application is first opened, or when a new terminal window is opened, the cursor does not blink.

If you open the Terminal settings window, uncheck Blinking cursor and re-check it, then close the settings window, the cursor will begin blinking.

As soon as you switch focus to another window and then switch back to the terminal, the cursor no longer blinks.

This was occurring on hrev54415.

Change History (3)

comment:1 by dogcow, 5 years ago

Description: modified (diff)

comment:2 by jackburton, 5 years ago

I think the problem is here:

When the Terminal window is deactivated, TermView::_Deactivate() gets called, and calls TermView::SwitchCursorBlinking(false);

TermView::SwitchCursorBlinking() sets fCursorBlinking to false.

When the window is then activated again, TermView::_Activate() calls TermView::SwitchCursorBlinking(fCursorBlinking), which is always false.

A quick fix would be changing TermView::_Activate() so that it checks the preference value instead of the local variable:

PrefHandler::Default()->getBool(PREF_BLINK_CURSOR);

comment:3 by pulkomandy, 5 years ago

Milestone: UnscheduledR1/beta3
Resolution: fixed
Status: newclosed

Fixed in hrev54589.

Note: See TracTickets for help on using tickets.