Terminal: fix cursor blinking

When the window was deactivated once, cursor wouldn't blink anymore on next activation. Fixes #16388

Change-Id: Id7042e078df2a5c5b397763cf544626efc5e589a
Reviewed-on: https://review.haiku-os.org/c/haiku/+/3258
Reviewed-by: Adrien Destugues <pulkomandy@gmail.com>